resources/tests/invalid_syntax/fn_decl_arg_comma.ct
//`Expected a ','!
//1
fn hello(i64 a b)->i64;